--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
   <div id="grid">
     <div class="row">
-      <div class="cell" style="background-color:#b5c075;width:25%;">A</div>
-      <div class="cell" style="background-color:#47047d;width:25%;">S</div>
-      <div class="cell" style="background-color:#3731bb;width:25%;">D</div>
-      <div class="cell" style="background-color:#945e91;width:25%;">F</div>
+      <div class="cell" style="width:25%;">A</div>
+      <div class="cell" style="width:25%;">S</div>
+      <div class="cell" style="width:25%;">D</div>
+      <div class="cell" style="width:25%;">F</div>
     </div>
     <div class="row">
-      <div class="cell" style="background-color:#590103;width:25%;">H</div>
-      <div class="cell" style="background-color:#29bfd4;width:25%;">J</div>
-      <div class="cell" style="background-color:#e330ad;width:25%;">K</div>
-      <div class="cell" style="background-color:#70d3d6;width:25%;">L</div>
+      <div class="cell" style="width:25%;">H</div>
+      <div class="cell" style="width:25%;">J</div>
+      <div class="cell" style="width:25%;">K</div>
+      <div class="cell" style="width:25%;">L</div>
     </div>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
