Tweak README a bit
* Add meta description fields

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Tones</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A web instrument with 8 musical notes that change randomly with each page load">
+  <meta name="keywords" content="audio,wav,base64,random">
+  <meta name="author" content="Morgan Brown">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro:600' rel='stylesheet' type='text/css'>
   <link href='assets/css/main.css' rel='stylesheet' type='text/css'>
