Use different WAV file backing
* Remove unneeded code
* TODO: use browsers blob

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="assets/js/randomColor.js"></script>
-  <script src="assets/js/riffwave.js"></script>
+  <script src="assets/js/WaveFile.js"></script>
   <script src="assets/js/instrument.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
