--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="cell" style="width:25%;">L</div>
     </div>
   </div>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="assets/js/randomColor.js"></script>
   <script src="assets/js/WaveFile.js"></script>
   <script src="assets/js/instrument.js"></script>
